--- a/index.html
+++ b/index.html
@@ -1,34 +1,77 @@
-<header class="bg-white shadow p-8">
-  <div class="max-w-5xl mx-auto text-center">
-    <h1 class="text-4xl font-extrabold leading-tight">
-      Cybersecurity Support for Small Teams, Creators, and Independent Professionals
-    </h1>
-    <p class="mt-4 text-lg text-gray-700 max-w-3xl mx-auto">
-      Get clear, ethical help from a U.S. Army veteran and cybersecurity specialist with real-world experience.
-    </p>
-  </div>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Iron Dillo Cybersecurity Consulting</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-100 text-gray-900 font-sans">
+  <header class="bg-white shadow p-8">
+    <div class="max-w-5xl mx-auto text-center">
+      <h1 class="text-4xl font-extrabold leading-tight">
+        Cybersecurity Support for Small Teams, Creators, and Independent Professionals
+      </h1>
+      <p class="mt-4 text-lg text-gray-700 max-w-3xl mx-auto">
+        Get clear, ethical help from a U.S. Army veteran and cybersecurity specialist with real-world experience.
+      </p>
+    </div>
+  </header>
 
-<section id="services" class="max-w-5xl mx-auto mt-12 px-6">
-  <h2 class="text-3xl font-semibold border-b-2 border-gray-300 pb-3 mb-8 text-center">
-    Services I Offer
-  </h2>
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-    <div class="bg-white rounded-lg shadow p-6">
-      <h3 class="text-xl font-semibold mb-2">Security Consultations & Risk Assessments</h3>
-      <p>Identify vulnerabilities, explain threats in plain English, and provide actionable steps to harden your systems.</p>
-    </div>
-    <div class="bg-white rounded-lg shadow p-6">
-      <h3 class="text-xl font-semibold mb-2">Policy & Documentation Support</h3>
-      <p>Cybersecurity policies, SOPs, and incident response plans tailored for your operations.</p>
-    </div>
-    <div class="bg-white rounded-lg shadow p-6">
-      <h3 class="text-xl font-semibold mb-2">Web Presence Security Checkups</h3>
-      <p>Audits for websites, forms, and public-facing content to catch XSS, misconfigurations, and other risks.</p>
-    </div>
-    <div class="bg-white rounded-lg shadow p-6">
-      <h3 class="text-xl font-semibold mb-2">Training & Awareness</h3>
-      <p>One-on-one or small group sessions on phishing prevention, password safety, and operational security basics.</p>
-    </div>
-  </div>
-</section>
+  <main class="max-w-5xl mx-auto mt-12 px-6 space-y-16">
+    <section id="services">
+      <h2 class="text-3xl font-semibold border-b-2 border-gray-300 pb-3 mb-8 text-center">
+        Services I Offer
+      </h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+        <div class="bg-white rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2">Security Consultations & Risk Assessments</h3>
+          <p>Identify vulnerabilities, explain threats in plain English, and provide actionable steps to harden your systems.</p>
+        </div>
+        <div class="bg-white rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2">Policy & Documentation Support</h3>
+          <p>Cybersecurity policies, SOPs, and incident response plans tailored for your operations.</p>
+        </div>
+        <div class="bg-white rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2">Web Presence Security Checkups</h3>
+          <p>Audits for websites, forms, and public-facing content to catch XSS, misconfigurations, and other risks.</p>
+        </div>
+        <div class="bg-white rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2">Training & Awareness</h3>
+          <p>One-on-one or small group sessions on phishing prevention, password safety, and operational security basics.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="bg-white rounded-lg shadow p-8">
+      <h2 class="text-3xl font-semibold border-b-2 border-gray-300 pb-3 mb-6">Who I Am</h2>
+      <p>
+        Hi, I'm Kristopher, a U.S. Army veteran, cybersecurity graduate, and founder of Iron Dillo. I provide remote support that blends technical know-how with clear communication and ethical service.
+      </p>
+    </section>
+
+    <section id="why" class="bg-white rounded-lg shadow p-8">
+      <h2 class="text-3xl font-semibold border-b-2 border-gray-300 pb-3 mb-6">Why Iron Dillo?</h2>
+      <ul class="list-disc list-inside space-y-2">
+        <li>Ethical, permission-based services only</li>
+        <li>Clear scope. No hidden costs.</li>
+        <li>Real documentation, not fluff</li>
+        <li>Remote-friendly, veteran-operated, ready when you are</li>
+      </ul>
+    </section>
+
+    <section id="contact" class="bg-white rounded-lg shadow p-8 text-center">
+      <h2 class="text-3xl font-semibold border-b-2 border-gray-300 pb-3 mb-6">Let's Talk</h2>
+      <p class="mb-6">
+        Have questions? Not sure what you need? <a href="#" class="text-blue-600 underline">Contact me</a> or <a href="#" class="text-blue-600 underline">book a free intro call</a> and let’s figure it out—no pressure.
+      </p>
+    </section>
+  </main>
+
+  <footer class="bg-white text-sm text-center p-4 mt-16 border-t">
+    <p>
+      Iron Dillo is a freelance cybersecurity consulting brand founded and operated by Kristopher McCoy. All services are conducted ethically and with explicit client consent.
+    </p>
+  </footer>
+</body>
+</html>
