--- a/index.html
+++ b/index.html
@@ -2,76 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>IronDillo Cybersecurity – Veteran-Owned Online Protection</title>
+  <meta name="description" content="Cybersecurity services built for real people and small businesses. Veteran-owned, trustworthy, and hands-on digital safety expertise.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Iron Dillo Cybersecurity Consulting</title>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Custom Styles -->
+  <style>
+    body {
+      background-color: #0e0e0e;
+      color: #f4f4f4;
+      font-family: Arial, sans-serif;
+    }
+    a {
+      color: #00ffc3;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    input, textarea {
+      background-color: #222;
+      color: #eee;
+      border: none;
+      border-radius: 5px;
+      padding: 0.7rem;
+      width: 100%;
+      max-width: 500px;
+      margin-top: 0.5rem;
+    }
+    button {
+      background-color: #00ffc3;
+      color: #000;
+      font-weight: bold;
+      padding: 0.7rem 1.5rem;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 1rem;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-900 font-sans">
-  <header class="bg-white shadow p-8">
-    <div class="max-w-5xl mx-auto text-center">
-      <h1 class="text-4xl font-extrabold leading-tight">
-        Cybersecurity Support for Small Teams, Creators, and Independent Professionals
-      </h1>
-      <p class="mt-4 text-lg text-gray-700 max-w-3xl mx-auto">
-        Get clear, ethical help from a U.S. Army veteran and cybersecurity specialist with real-world experience.
-      </p>
-    </div>
+
+<body class="flex flex-col min-h-screen">
+
+  <header class="p-6 text-center">
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
+    <h1 class="text-4xl font-extrabold text-teal-400 mb-2">Iron Dillo Cybersecurity</h1>
+    <h2 class="text-xl text-gray-400 mb-6">Digital Defense with Texas Grit</h2>
+    <p class="max-w-3xl mx-auto text-lg px-4">
+      Welcome to Iron Dillo! Your veteran-owned partner in digital security. I help individuals and small businesses stay safe online through diagnostics, documentation, and hands-on support.
+    </p>
+    <p class="max-w-3xl mx-auto text-lg px-4 mt-4">
+      Whether you're securing your first website or assessing for vulnerabilities, Iron Dillo brings expert guidance with integrity, clarity, and care. Veteran-owned, mission-driven, and here to help you build safer digital ground.
+    </p>
   </header>
 
-  <main class="max-w-5xl mx-auto mt-12 px-6 space-y-16">
+  <nav class="bg-gray-900 py-3 text-center space-x-6">
+    <a href="/index.html" class="hover:underline">Home</a>
+    <a href="/services.html" class="hover:underline">Services</a>
+    <a href="/about.html" class="hover:underline">About</a>
+    <a href="/blog.html" class="hover:underline">Blog</a>
+  </nav>
+
+  <main class="flex-grow px-6 py-12 max-w-5xl mx-auto space-y-16">
+
+    <section class="text-center">
+      <div class="space-x-6 mb-6">
+        <a href="https://www.fiverr.com/artilleryjoe" target="_blank" class="inline-block hover:underline">Fiverr</a>
+        <a href="https://ko-fi.com/kris98630" target="_blank" class="inline-block hover:underline">Ko-fi</a>
+        <a href="https://github.com/Artilleryjoe" target="_blank" class="inline-block hover:underline">GitHub</a>
+      </div>
+      <p class="text-teal-400 font-semibold mb-6">🔒 Currently accepting new clients.<br />Get in touch or request a quote via Fiverr or Ko-fi.</p>
+    </section>
+
     <section id="services">
-      <h2 class="text-3xl font-semibold border-b-2 border-gray-300 pb-3 mb-8 text-center">
+      <h2 class="text-3xl font-semibold border-b-2 border-gray-700 pb-3 mb-8 text-center text-teal-400">
         Services I Offer
       </h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-        <div class="bg-white rounded-lg shadow p-6">
-          <h3 class="text-xl font-semibold mb-2">Security Consultations & Risk Assessments</h3>
+        <div class="bg-gray-900 rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2 text-teal-300">Security Consultations & Risk Assessments</h3>
           <p>Identify vulnerabilities, explain threats in plain English, and provide actionable steps to harden your systems.</p>
         </div>
-        <div class="bg-white rounded-lg shadow p-6">
-          <h3 class="text-xl font-semibold mb-2">Policy & Documentation Support</h3>
-          <p>Cybersecurity policies, SOPs, and incident response plans tailored for your operations.</p>
-        </div>
-        <div class="bg-white rounded-lg shadow p-6">
-          <h3 class="text-xl font-semibold mb-2">Web Presence Security Checkups</h3>
-          <p>Audits for websites, forms, and public-facing content to catch XSS, misconfigurations, and other risks.</p>
-        </div>
-        <div class="bg-white rounded-lg shadow p-6">
-          <h3 class="text-xl font-semibold mb-2">Training & Awareness</h3>
-          <p>One-on-one or small group sessions on phishing prevention, password safety, and operational security basics.</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="about" class="bg-white rounded-lg shadow p-8">
-      <h2 class="text-3xl font-semibold border-b-2 border-gray-300 pb-3 mb-6">Who I Am</h2>
-      <p>
-        Hi, I'm Kristopher, a U.S. Army veteran, cybersecurity graduate, and founder of Iron Dillo. I provide remote support that blends technical know-how with clear communication and ethical service.
-      </p>
-    </section>
-
-    <section id="why" class="bg-white rounded-lg shadow p-8">
-      <h2 class="text-3xl font-semibold border-b-2 border-gray-300 pb-3 mb-6">Why Iron Dillo?</h2>
-      <ul class="list-disc list-inside space-y-2">
-        <li>Ethical, permission-based services only</li>
-        <li>Clear scope. No hidden costs.</li>
-        <li>Real documentation, not fluff</li>
-        <li>Remote-friendly, veteran-operated, ready when you are</li>
-      </ul>
-    </section>
-
-    <section id="contact" class="bg-white rounded-lg shadow p-8 text-center">
-      <h2 class="text-3xl font-semibold border-b-2 border-gray-300 pb-3 mb-6">Let's Talk</h2>
-      <p class="mb-6">
-        Have questions? Not sure what you need? <a href="#" class="text-blue-600 underline">Contact me</a> or <a href="#" class="text-blue-600 underline">book a free intro call</a> and let’s figure it out—no pressure.
-      </p>
-    </section>
-  </main>
-
-  <footer class="bg-white text-sm text-center p-4 mt-16 border-t">
-    <p>
-      Iron Dillo is a freelance cybersecurity consulting brand founded and operated by Kristopher McCoy. All services are conducted ethically and with explicit client consent.
-    </p>
-  </footer>
-</body>
-</html>
+        <div class="bg-gray-900 r
