--- a/index.html
+++ b/index.html
@@ -88,4 +88,52 @@
           <h3 class="text-xl font-semibold mb-2 text-teal-300">Security Consultations & Risk Assessments</h3>
           <p>Identify vulnerabilities, explain threats in plain English, and provide actionable steps to harden your systems.</p>
         </div>
-        <div class="bg-gray-900 r
+        <div class="bg-gray-900 rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2 text-teal-300">Policy & Documentation Support</h3>
+          <p>Cybersecurity policies, SOPs, and incident response plans tailored for your operations.</p>
+        </div>
+        <div class="bg-gray-900 rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2 text-teal-300">Web Presence Security Checkups</h3>
+          <p>Audits for websites, forms, and public-facing content to catch XSS, misconfigurations, and other risks.</p>
+        </div>
+        <div class="bg-gray-900 rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2 text-teal-300">Training & Awareness</h3>
+          <p>One-on-one or small group sessions on phishing prevention, password safety, and operational security basics.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="bg-gray-900 rounded-lg shadow p-8 text-center">
+      <h2 class="text-3xl font-semibold border-b-2 border-gray-700 pb-3 mb-6 text-teal-400">Who I Am</h2>
+      <p>
+        Hi, I'm Kristopher, a U.S. Army veteran, cybersecurity graduate, and founder of Iron Dillo. I provide remote support that blends technical know-how with clear communication and ethical service.
+      </p>
+    </section>
+
+    <section id="why" class="bg-gray-900 rounded-lg shadow p-8 text-center">
+      <h2 class="text-3xl font-semibold border-b-2 border-gray-700 pb-3 mb-6 text-teal-400">Why Iron Dillo?</h2>
+      <ul class="list-disc list-inside space-y-2 max-w-xl mx-auto text-left">
+        <li>Ethical, permission-based services only</li>
+        <li>Clear scope. No hidden costs.</li>
+        <li>Real documentation, not fluff</li>
+        <li>Remote-friendly, veteran-operated, ready when you are</li>
+      </ul>
+    </section>
+
+    <section id="contact" class="text-center">
+      <h2 class="text-3xl font-semibold mb-4 text-teal-400">Let's Talk</h2>
+      <p class="mb-6 max-w-xl mx-auto">
+        Have questions? Not sure what you need? <a href="#" class="underline">Contact me</a> or <a href="#" class="underline">book a free intro call</a> and let’s figure it out—no pressure.
+      </p>
+    </section>
+  </main>
+
+  <footer class="bg-gray-900 text-gray-500 text-center p-6 mt-12">
+    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
+    <a href="/privacy.html" class="hover:underline">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline">Terms</a> | 
+    <a href="/credits.html" class="hover:underline">Credits</a>
+  </footer>
+
+</body>
+</html>
