--- a/index.html
+++ b/index.html
@@ -86,19 +86,31 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
         <div class="bg-gray-900 rounded-lg shadow p-6">
           <h3 class="text-xl font-semibold mb-2 text-teal-300">Security Consultations & Risk Assessments</h3>
-          <p>Identify vulnerabilities, explain threats in plain English, and provide actionable steps to harden your systems.</p>
+          <p>Identify vulnerabilities, explain threats in plain language, and provide actionable steps to strengthen your defenses.</p>
         </div>
         <div class="bg-gray-900 rounded-lg shadow p-6">
-          <h3 class="text-xl font-semibold mb-2 text-teal-300">Policy & Documentation Support</h3>
-          <p>Cybersecurity policies, SOPs, and incident response plans tailored for your operations.</p>
+          <h3 class="text-xl font-semibold mb-2 text-teal-300">Cybersecurity Policy & Documentation Support</h3>
+          <p>Custom SOPs, incident response plans, and policies tailored to your business operations.</p>
         </div>
         <div class="bg-gray-900 rounded-lg shadow p-6">
-          <h3 class="text-xl font-semibold mb-2 text-teal-300">Web Presence Security Checkups</h3>
-          <p>Audits for websites, forms, and public-facing content to catch XSS, misconfigurations, and other risks.</p>
+          <h3 class="text-xl font-semibold mb-2 text-teal-300">Website & Web Presence Security Audits</h3>
+          <p>Audits to catch vulnerabilities like XSS, misconfigurations, and other risks in websites and online content.</p>
         </div>
         <div class="bg-gray-900 rounded-lg shadow p-6">
-          <h3 class="text-xl font-semibold mb-2 text-teal-300">Training & Awareness</h3>
-          <p>One-on-one or small group sessions on phishing prevention, password safety, and operational security basics.</p>
+          <h3 class="text-xl font-semibold mb-2 text-teal-300">Personal & Small Business Digital Security Training</h3>
+          <p>Phishing prevention, password safety, and operational security basics taught in simple, easy-to-understand terms.</p>
+        </div>
+        <div class="bg-gray-900 rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2 text-teal-300">Incident Response Guidance & Remediation Assistance</h3>
+          <p>Helping you respond effectively to security incidents with clear, ethical support.</p>
+        </div>
+        <div class="bg-gray-900 rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2 text-teal-300">Vulnerability Scanning & Reporting</h3>
+          <p>Thorough scans with straightforward reports and recommendations.</p>
+        </div>
+        <div class="bg-gray-900 rounded-lg shadow p-6">
+          <h3 class="text-xl font-semibold mb-2 text-teal-300">Secure Configuration of Devices & Networks</h3>
+          <p>Setting up your devices and networks for maximum security without hassle.</p>
         </div>
       </div>
     </section>
