--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
   <footer class="bg-gray-900 text-gray-500 text-center p-6 mt-12">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
     <a href="/privacy.html" class="hover:underline">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline">Terms</a> | 
-    <a href="/credits.html" class="hover:underline">Credits</a>
+    <a href="/terms.html" class="hover:underline">Terms</a>
   </footer>
 
 </body>
