--- a/services.html
+++ b/services.html
@@ -2,127 +2,87 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Services – IronDillo Cybersecurity</title>
-  <meta name="description" content="Explore IronDillo's consulting, diagnostics, and documentation services for personal and small business cybersecurity needs.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-  <link rel="canonical" href="https://irondillo.com/services.html" />
-
-  <!-- SEO Meta -->
-  <meta name="description" content="Explore IronDillo's cybersecurity services, including diagnostics, consulting, and secure setup for individuals and small businesses.">
-  <meta name="keywords" content="cybersecurity services, small business security, technical writing, consulting, diagnostics">
-  <meta name="author" content="Kristopher McCoy">
-
-  <!-- Open Graph / Social -->
-  <meta property="og:title" content="IronDillo Cybersecurity Services">
-  <meta property="og:description" content="Explore the services IronDillo offers to help you build a safer digital space.">
-  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
-  <meta property="og:url" content="https://irondillo.com/services.html">
-  <meta name="twitter:card" content="summary_large_image">
-
+  <title>Services | Iron Dillo Cybersecurity</title>
+  <meta name="description" content="Explore the cybersecurity services offered by Iron Dillo, focused on protecting East Texas individuals and small businesses with practical, ethical solutions." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background: #0e0e0e;
+      background-color: #0e0e0e;
       color: #f4f4f4;
       font-family: Arial, sans-serif;
-      padding: 2rem;
-      text-align: center;
     }
-    header img {
-      max-width: 150px;
-      height: auto;
-    }
-    h1 {
-      color: #00ffc3;
-      font-size: 2.5rem;
-    }
-    .service {
-      background: #1a1a1a;
-      margin: 2rem auto;
-      padding: 1.5rem;
-      max-width: 700px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 255, 195, 0.1);
-      text-align: left;
-    }
-    .service h2 {
-      color: #00ffc3;
-    }
-    .service p {
-      font-size: 1rem;
-    }
-    .cta a {
-      color: #00ffc3;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav {
-      background: #111;
-      padding: 1rem 0;
-    }
-    nav a {
-      margin: 0 1rem;
+    a {
       color: #00ffc3;
       text-decoration: none;
     }
-    @media (max-width: 600px) {
-      h1 { font-size: 2rem; }
-      nav a { display: block; margin: 0.5rem 0; }
-      header img { max-width: 100px; }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
+<body class="flex flex-col min-h-screen">
 
-<body>
-
-  <header>
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo">
+  <header class="p-6 text-center">
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
+    <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Services</h1>
+    <p class="max-w-3xl mx-auto text-lg px-4">
+      Practical cybersecurity solutions tailored for East Texas individuals and small businesses. Ethical, clear, and focused on what matters to you.
+    </p>
   </header>
 
-  <nav>
-    <a href="/index.html">Home</a>
-    <a href="/services.html">Services</a>
-    <a href="/about.html">About</a>
-    <a href="/blog.html">Blog</a>
-  </nav>
+  <main class="flex-grow max-w-5xl mx-auto px-6 py-12 space-y-16">
 
- <h1>Services</h1>
-<p>Whether you’re running a nonprofit, a family business, or just trying to protect your digital life—I’m here to help you make sense of cybersecurity. Iron Dillo offers no-pressure, veteran-backed services tailored to real people and growing teams.</p>
+    <section class="bg-gray-900 rounded-lg shadow p-8">
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Security Consultations & Risk Assessments</h2>
+      <p>Identify your current vulnerabilities, understand cybersecurity threats in clear language, and receive actionable recommendations to strengthen your systems and protect your data.</p>
+    </section>
 
-<div class="service">
-  <h2>Cybersecurity Audit (Starter)</h2>
-  <p>A plain-English walkthrough of your current setup. No scare tactics—just what’s exposed, what’s fine, and what needs attention. Perfect for websites, small networks, and cloud-based businesses.</p>
-</div>
+    <section class="bg-gray-900 rounded-lg shadow p-8">
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Cybersecurity Policy & Documentation Support</h2>
+      <p>Develop custom cybersecurity policies, standard operating procedures (SOPs), and incident response plans designed specifically for your operations to help you stay prepared and compliant.</p>
+    </section>
 
-<div class="service">
-  <h2>Employee Security Training</h2>
-  <p>Equip your team to spot phishing, social engineering, and weak links. Custom sessions available for remote teams, volunteers, or non-technical staff.</p>
-</div>
+    <section class="bg-gray-900 rounded-lg shadow p-8">
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Website & Web Presence Security Audits</h2>
+      <p>Audit your website, online forms, and public-facing content to find vulnerabilities such as cross-site scripting (XSS), misconfigurations, and other common security risks that could expose your business to cyberattacks.</p>
+    </section>
 
-<div class="service">
-  <h2>Alert & Incident Translation</h2>
-  <p>Confused by a warning or suspicious email? I’ll break it down, explain the risk (if any), and advise your next move in clear terms.</p>
-</div>
+    <section class="bg-gray-900 rounded-lg shadow p-8">
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Personal & Small Business Digital Security Training</h2>
+      <p>One-on-one or small group training sessions covering phishing prevention, password safety, operational security basics, and other essential topics—delivered in straightforward, easy-to-understand language.</p>
+    </section>
 
-<div class="service">
-  <h2>Light Touch Site Check</h2>
-  <p>I’ll run non-invasive testing of your contact forms, login screens, or public-facing pages to spot basic misconfigurations or leaks.</p>
-</div>
+    <section class="bg-gray-900 rounded-lg shadow p-8">
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Incident Response Guidance & Remediation Assistance</h2>
+      <p>If you experience a security incident, I’ll guide you through the response process, help identify the scope, and assist with remediation to minimize damage and restore security quickly.</p>
+    </section>
 
-<div class="service">
-  <h2>Add-On: Documentation Help</h2>
-  <p>If you need a privacy policy, terms of use, or a short “security practices” page for clients, I offer lean, readable copy built from your actual practices.</p>
-</div>
+    <section class="bg-gray-900 rounded-lg shadow p-8">
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Vulnerability Scanning & Reporting</h2>
+      <p>Thorough scans of your systems and networks to identify weaknesses, paired with clear, actionable reports outlining findings and recommended fixes.</p>
+    </section>
 
-<p>Ready to get started? Use the secure form below or reach out via <a href="https://ko-fi.com/kris98630" target="_blank">Ko-fi</a>. Every job starts with a no-obligation conversation. I don’t upsell—I explain and assist.</p>
+    <section class="bg-gray-900 rounded-lg shadow p-8">
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Secure Configuration of Devices & Networks</h2>
+      <p>Ensure your devices, routers, and networks are set up with security best practices to reduce risks and protect your digital environment.</p>
+    </section>
 
+    <section class="text-center mt-12">
+      <p class="text-teal-400 font-semibold max-w-xl mx-auto">
+        Pricing is customized based on your unique needs.<br />
+        <a href="/contact.html" class="underline">Contact me</a> today for a free consultation and personalized quote.
+      </p>
+    </section>
+
+  </main>
+
+  <footer class="bg-gray-900 text-gray-500 text-center p-6 mt-12">
+    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
+    <a href="/privacy.html" class="hover:underline">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline">Terms</a>
+  </footer>
 
 </body>
 </html>
-
-<footer style="margin-top:3rem; padding:1rem; color:#888; font-size:0.9rem;">
-  &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-  <a href="/privacy.html" style="color:#00ffc3; text-decoration:none;">Privacy</a> | 
-  <a href="/terms.html" style="color:#00ffc3; text-decoration:none;">Terms</a> | 
-  <a href="/credits.html" style="color:#00ffc3; text-decoration:none;">Credits</a>
-</footer>
