--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
   <title>Services | Iron Dillo Cybersecurity</title>
@@ -7,64 +7,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      background-color: #0e0e0e;
-      color: #f4f4f4;
-      font-family: Arial, sans-serif;
-    }
-    a {
-      color: #00ffc3;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
 </head>
-<body class="flex flex-col min-h-screen">
+<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
   <header class="p-6 text-center">
     <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
     <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Services</h1>
-    <p class="max-w-3xl mx-auto text-lg px-4">
+    <p class="max-w-3xl mx-auto text-lg px-4 leading-relaxed">
       Practical cybersecurity solutions tailored for East Texas individuals and small businesses. Ethical, clear, and focused on what matters to you.
     </p>
   </header>
 
-  <main class="flex-grow max-w-5xl mx-auto px-6 py-12 space-y-16">
+  <!-- Navigation -->
+  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10">
+    <a href="/index.html" class="text-teal-400 hover:underline font-semibold">Home</a>
+    <a href="/services.html" class="text-teal-400 hover:underline font-semibold">Services</a>
+    <a href="/about.html" class="text-teal-400 hover:underline font-semibold">About</a>
+    <a href="/blog.html" class="text-teal-400 hover:underline font-semibold">Blog</a>
+    <a href="/contact.html" class="text-teal-400 hover:underline font-semibold">Contact</a>
+  </nav>
 
-    <section class="bg-gray-900 rounded-lg shadow p-8">
+  <main class="flex-grow max-w-5xl mx-auto px-6 py-4 space-y-16">
+
+    <!-- Services Sections -->
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Security Consultations & Risk Assessments</h2>
       <p>Identify your current vulnerabilities, understand cybersecurity threats in clear language, and receive actionable recommendations to strengthen your systems and protect your data.</p>
     </section>
 
-    <section class="bg-gray-900 rounded-lg shadow p-8">
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Cybersecurity Policy & Documentation Support</h2>
       <p>Develop custom cybersecurity policies, standard operating procedures (SOPs), and incident response plans designed specifically for your operations to help you stay prepared and compliant.</p>
     </section>
 
-    <section class="bg-gray-900 rounded-lg shadow p-8">
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Website & Web Presence Security Audits</h2>
       <p>Audit your website, online forms, and public-facing content to find vulnerabilities such as cross-site scripting (XSS), misconfigurations, and other common security risks that could expose your business to cyberattacks.</p>
     </section>
 
-    <section class="bg-gray-900 rounded-lg shadow p-8">
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Personal & Small Business Digital Security Training</h2>
       <p>One-on-one or small group training sessions covering phishing prevention, password safety, operational security basics, and other essential topics—delivered in straightforward, easy-to-understand language.</p>
     </section>
 
-    <section class="bg-gray-900 rounded-lg shadow p-8">
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Incident Response Guidance & Remediation Assistance</h2>
       <p>If you experience a security incident, I’ll guide you through the response process, help identify the scope, and assist with remediation to minimize damage and restore security quickly.</p>
     </section>
 
-    <section class="bg-gray-900 rounded-lg shadow p-8">
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Vulnerability Scanning & Reporting</h2>
       <p>Thorough scans of your systems and networks to identify weaknesses, paired with clear, actionable reports outlining findings and recommended fixes.</p>
     </section>
 
-    <section class="bg-gray-900 rounded-lg shadow p-8">
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Secure Configuration of Devices & Networks</h2>
       <p>Ensure your devices, routers, and networks are set up with security best practices to reduce risks and protect your digital environment.</p>
     </section>
@@ -78,7 +74,7 @@
 
   </main>
 
-  <footer class="bg-gray-900 text-gray-500 text-center p-6 mt-12">
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
     <a href="/privacy.html" class="hover:underline">Privacy</a> | 
     <a href="/terms.html" class="hover:underline">Terms</a>
