--- a/about.html
+++ b/about.html
@@ -1,95 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <title>About – Iron Dillo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-  <link rel="canonical" href="https://irondillo.com/about.html" />
-
-  <!-- SEO Meta -->
-  <meta name="description" content="Learn more about IronDillo, a veteran-owned cybersecurity consultancy focused on clarity, resilience, and protection.">
-  <meta name="keywords" content="cybersecurity, veteran-owned, about, small business, IT security">
-  <meta name="author" content="Kristopher McCoy">
-
-  <!-- Social -->
-  <meta property="og:title" content="About Iron Dillo">
-  <meta property="og:description" content="Founded by a U.S. Army veteran, Iron Dillo offers expert cybersecurity guidance with integrity and care.">
-  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
-  <meta property="og:url" content="https://irondillo.com/about.html">
-  <meta name="twitter:card" content="summary_large_image">
-
-  <style>
-    body {
-      background: #0e0e0e;
-      color: #f4f4f4;
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      text-align: center;
-    }
-    header img {
-      max-width: 150px;
-      height: auto;
-    }
-    h1 {
-      color: #00ffc3;
-      font-size: 2.5rem;
-    }
-    p {
-      max-width: 700px;
-      margin: 1rem auto;
-      font-size: 1.1rem;
-    }
-    nav {
-      background: #111;
-      padding: 1rem 0;
-    }
-    nav a {
-      margin: 0 1rem;
-      color: #00ffc3;
-      text-decoration: none;
-    }
-    @media (max-width: 600px) {
-      h1 { font-size: 2rem; }
-      nav a { display: block; margin: 0.5rem 0; }
-      header img { max-width: 100px; }
-    }
-  </style>
+  <title>About | Iron Dillo Cybersecurity</title>
+  <meta name="description" content="Learn about Kristopher McCoy, U.S. Army veteran and founder of Iron Dillo Cybersecurity, dedicated to protecting individuals and small businesses with clear, ethical cybersecurity expertise." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
-<body>
-
-  <header>
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo">
+  <header class="p-6 text-center">
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
+    <h1 class="text-4xl font-extrabold text-teal-400 mb-4">About Kristopher McCoy</h1>
+    <p class="max-w-3xl mx-auto text-lg px-4 leading-relaxed">
+      Hi, I’m Kristopher McCoy — a U.S. Army combat veteran and cybersecurity professional with a Master’s degree in Cybersecurity (3.97 GPA) and an ISC2 certification candidate. After years of technical training and hands-on experience, I founded Iron Dillo Cybersecurity to help individuals and small businesses protect themselves in an increasingly complex digital world.
+    </p>
   </header>
 
-  <nav>
-    <a href="/index.html">Home</a>
-    <a href="/services.html">Services</a>
-    <a href="/about.html">About</a>
-    <a href="/blog.html">Blog</a>
+  <!-- Navigation -->
+  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10">
+    <a href="/index.html" class="text-teal-400 hover:underline font-semibold">Home</a>
+    <a href="/services.html" class="text-teal-400 hover:underline font-semibold">Services</a>
+    <a href="/about.html" class="text-teal-400 hover:underline font-semibold">About</a>
+    <a href="/blog.html" class="text-teal-400 hover:underline font-semibold">Blog</a>
+    <a href="/contact.html" class="text-teal-400 hover:underline font-semibold">Contact</a>
   </nav>
 
-  <h1>About Iron Dillo</h1>
+  <main class="flex-grow max-w-4xl mx-auto px-6 py-12 space-y-10">
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
+      <p class="text-gray-300 leading-relaxed">
+        My mission is simple: to bring trustworthy, practical cybersecurity expertise to people who often get overlooked by big firms. I focus on clear communication and ethical service — no technical jargon, no scary buzzwords, just straightforward advice and hands-on support that makes sense.
+      </p>
+    </section>
 
-  <p><strong>Iron Dillo</strong> is more than a brand—it's a mission. Founded by a U.S. Army veteran with a passion for cybersecurity, I created IronDillo to help individuals and small businesses stay safe in a complex digital world.</p>
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
+      <p class="text-gray-300 leading-relaxed">
+        Being veteran-owned means I bring discipline, integrity, and grit to every project, with a commitment to transparency and respect for your unique needs. I’m proud to serve East Texas and rural communities, helping build stronger, safer digital foundations one client at a time.
+      </p>
+    </section>
+  </main>
 
-  <p>My goal is to translate technical know-how into real-world protection. Whether you're just getting started or looking to harden your existing systems, I offer straight answers, reliable service, and no fear tactics. Just solid, honest help.</p>
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm">
+    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
+    <a href="/privacy.html" class="hover:underline">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline">Terms</a>
+  </footer>
 
-  <p>The armadillo in the name isn't just a mascot—it's a symbol of defense, resilience, and navigating life with a strong shell and a clear purpose. That's what I aim to offer you and your systems, too.</p>
-
-  <p>Thanks for stopping by. If you're ready to roll forward with security, <a href="/services.html" style="color:#00ffc3;">let's talk</a>.</p>
-
-  <p>Want to know what IronDillo can do for you? <a href="/services.html">Explore my services</a>.</p>
-
-  
 </body>
 </html>
-
-<footer style="margin-top:3rem; padding:1rem; color:#888; font-size:0.9rem;">
-  &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-  <a href="/privacy.html" style="color:#00ffc3; text-decoration:none;">Privacy</a> | 
-  <a href="/terms.html" style="color:#00ffc3; text-decoration:none;">Terms</a> | 
-  <a href="/credits.html" style="color:#00ffc3; text-decoration:none;">Credits</a>
-</footer>
-
