--- a/about.html
+++ b/about.html
@@ -3,20 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>About | Iron Dillo Cybersecurity</title>
-  <meta name="description" content="Learn about Kristopher McCoy, U.S. Army veteran and founder of Iron Dillo Cybersecurity, dedicated to protecting individuals and small businesses with clear, ethical cybersecurity expertise." />
+  <meta name="description" content="Iron Dillo Cybersecurity is a veteran-owned consultancy providing trustworthy cybersecurity solutions to individuals and small businesses in East Texas and rural communities." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
-
-  <header class="p-6 text-center">
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
-    <h1 class="text-4xl font-extrabold text-teal-400 mb-4">About Kristopher McCoy</h1>
-    <p class="max-w-3xl mx-auto text-lg px-4 leading-relaxed">
-      Hi, I’m Kristopher McCoy — a U.S. Army combat veteran and cybersecurity professional with a Master’s degree in Cybersecurity (3.97 GPA) and an ISC2 certification candidate. After years of technical training and hands-on experience, I founded Iron Dillo Cybersecurity to help individuals and small businesses protect themselves in an increasingly complex digital world.
-    </p>
-  </header>
 
   <!-- Navigation -->
   <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10">
@@ -29,14 +21,15 @@
 
   <main class="flex-grow max-w-4xl mx-auto px-6 py-12 space-y-10">
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <p class="text-gray-300 leading-relaxed">
-        My mission is simple: to bring trustworthy, practical cybersecurity expertise to people who often get overlooked by big firms. I focus on clear communication and ethical service — no technical jargon, no scary buzzwords, just straightforward advice and hands-on support that makes sense.
+      <h1 class="text-4xl font-extrabold text-teal-400 mb-6">About Iron Dillo Cybersecurity</h1>
+      <p class="text-gray-300 leading-relaxed mb-4">
+        Iron Dillo Cybersecurity is a veteran-owned consultancy providing practical and trustworthy cybersecurity solutions for individuals and small businesses, especially in East Texas and rural communities. We believe everyone deserves clear and ethical guidance to protect their digital lives without confusing jargon or hidden agendas.
       </p>
-    </section>
-
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
+      <p class="text-gray-300 leading-relaxed mb-4">
+        Our approach is rooted in discipline, integrity, and a commitment to demystifying cybersecurity. Whether you need to secure your first website or address complex vulnerabilities, Iron Dillo delivers hands-on support tailored to your unique needs.
+      </p>
       <p class="text-gray-300 leading-relaxed">
-        Being veteran-owned means I bring discipline, integrity, and grit to every project, with a commitment to transparency and respect for your unique needs. I’m proud to serve East Texas and rural communities, helping build stronger, safer digital foundations one client at a time.
+        Iron Dillo was founded by a U.S. Army combat veteran and cybersecurity professional who combines technical expertise with a straightforward and human approach. The mission is to help those often overlooked by larger firms build safer digital foundations one client at a time.
       </p>
     </section>
   </main>
