--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
     </article>
 
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/blog/thumb-tech-support.jpg" alt="Tech Support Scam" class="w-full h-48 object-cover">
+      <img src="/assets/thumb-tech-support.png" alt="Tech Support Scam" class="w-full h-48 object-cover">
       <div class="p-6">
         <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/tech-support-scam-warning.html">How to Tell If That Tech Support Call Is a Scam</a></h2>
         <p class="text-gray-300 text-sm">Don’t get tricked by cold-callers claiming your account was hacked. Learn how to spot the red flags.</p>
