--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
     </article>
 
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/blog/thumb-wordpress.jpg" alt="WordPress Security" class="w-full h-48 object-cover">
+      <img src="/assets/thumb-wordpress.png" alt="WordPress Security" class="w-full h-48 object-cover">
       <div class="p-6">
         <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/wordpress-security-basics.html">Basic WordPress Security for Beginners</a></h2>
         <p class="text-gray-300 text-sm">WordPress makes it easy to launch a site, but simplicity comes with security risks.</p>
@@ -68,7 +68,7 @@
     </article>
 
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/blog/thumb-tools.jpg" alt="Free Tools I Trust" class="w-full h-48 object-cover">
+      <img src="/assets/thumb-tools.jpg" alt="Free Tools I Trust" class="w-full h-48 object-cover">
       <div class="p-6">
         <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/free-tools-i-trust.html">Free Tools I Trust</a></h2>
         <p class="text-gray-300 text-sm">Not every cybersecurity tool costs money—or your sanity.</p>
@@ -76,7 +76,7 @@
     </article>
 
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/blog/thumb-ports.jpg" alt="Open Ports Explained" class="w-full h-48 object-cover">
+      <img src="/assets/thumb-ports.jpg" alt="Open Ports Explained" class="w-full h-48 object-cover">
       <div class="p-6">
         <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/closing-ports-backdoors.html">Are Open Ports a Backdoor?</a></h2>
         <p class="text-gray-300 text-sm">Open ports are like doors into your system. Some are needed. Some aren't.</p>
@@ -84,7 +84,7 @@
     </article>
 
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/blog/thumb-rural.jpg" alt="Rural Cybersecurity" class="w-full h-48 object-cover">
+      <img src="/assets/thumb-rural.jpg" alt="Rural Cybersecurity" class="w-full h-48 object-cover">
       <div class="p-6">
         <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/rural-cybersecurity.html">Why Rural Businesses Can’t Ignore Cybersecurity</a></h2>
         <p class="text-gray-300 text-sm">When folks think about hackers, they picture big cities. That’s a mistake.</p>
