--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
     </article>
 
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-wordpress.png" alt="WordPress Security" class="w-full h-48 object-cover">
+      <img src="/assets/thumb-wordpress.jpg" alt="WordPress Security" class="w-full h-48 object-cover">
       <div class="p-6">
         <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/wordpress-security-basics.html">Basic WordPress Security for Beginners</a></h2>
         <p class="text-gray-300 text-sm">WordPress makes it easy to launch a site, but simplicity comes with security risks.</p>
