--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
     </article>
 
     <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-ports.png" alt="Open Ports Explained" class="w-full h-48 object-cover">
+      <img src="/assets/thumb-ports.jpg" alt="Open Ports Explained" class="w-full h-48 object-cover">
       <div class="p-6">
         <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/closing-ports-backdoors.html">Are Open Ports a Backdoor?</a></h2>
         <p class="text-gray-300 text-sm">Open ports are like doors into your system. Some are needed. Some aren't.</p>
