--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <title>IronDillo Cybersecurity – Veteran-Owned Online Protection</title>
+  <title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
   <meta name="description" content="Cybersecurity services built for real people and small businesses. Veteran-owned, trustworthy, and hands-on digital safety expertise." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
@@ -11,84 +11,90 @@
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
   <!-- Header with logo and intro -->
-  <header class="p-6 text-center">
+  <header class="p-6 text-center max-w-4xl mx-auto">
     <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
     <h1 class="text-4xl font-extrabold text-teal-400 mb-2">Iron Dillo Cybersecurity</h1>
     <h2 class="text-xl text-gray-400 mb-6">Digital Defense with Texas Grit</h2>
-    <p class="max-w-3xl mx-auto text-lg px-4">
+    <p class="text-lg leading-relaxed px-4 mb-4">
       Welcome to Iron Dillo! Your veteran-owned partner in digital security. I help individuals and small businesses stay safe online through diagnostics, documentation, and hands-on support.
     </p>
-    <p class="max-w-3xl mx-auto text-lg px-4 mt-4">
+    <p class="text-lg leading-relaxed px-4">
       Whether you're securing your first website or assessing for vulnerabilities, Iron Dillo brings expert guidance with integrity, clarity, and care. Veteran-owned, mission-driven, and here to help you build safer digital ground.
     </p>
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-gray-900 py-3 text-center space-x-6 mb-10">
-    <a href="/index.html" class="hover:underline">Home</a>
-    <a href="/services.html" class="hover:underline">Services</a>
-    <a href="/about.html" class="hover:underline">About</a>
-    <a href="/blog.html" class="hover:underline">Blog</a>
-    <a href="/contact.html" class="hover:underline">Contact</a>
+  <nav class="bg-gray-800 py-3 text-center max-w-4xl mx-auto rounded-md mb-10">
+    <a href="/index.html" class="inline-block text-teal-400 font-semibold hover:underline mx-4">Home</a>
+    <a href="/services.html" class="inline-block text-teal-400 font-semibold hover:underline mx-4">Services</a>
+    <a href="/about.html" class="inline-block text-teal-400 font-semibold hover:underline mx-4">About</a>
+    <a href="/blog.html" class="inline-block text-teal-400 font-semibold hover:underline mx-4">Blog</a>
+    <a href="/contact.html" class="inline-block text-teal-400 font-semibold hover:underline mx-4">Contact</a>
   </nav>
 
-  <!-- Main content -->
-  <main class="flex-grow max-w-5xl mx-auto px-6 py-12 space-y-16">
+  <!-- Main content container -->
+  <main class="flex-grow max-w-4xl mx-auto px-6 py-12 space-y-16">
 
+    <!-- Social links and client note -->
     <section class="text-center">
-      <div class="space-x-6 mb-6">
-        <a href="https://www.fiverr.com/artilleryjoe" target="_blank" class="inline-block hover:underline">Fiverr</a>
-        <a href="https://ko-fi.com/kris98630" target="_blank" class="inline-block hover:underline">Ko-fi</a>
-        <a href="https://github.com/Artilleryjoe" target="_blank" class="inline-block hover:underline">GitHub</a>
+      <div class="space-x-8 mb-6">
+        <a href="https://www.fiverr.com/artilleryjoe" target="_blank" class="inline-block text-teal-400 font-semibold hover:underline">Fiverr</a>
+        <a href="https://ko-fi.com/kris98630" target="_blank" class="inline-block text-teal-400 font-semibold hover:underline">Ko-fi</a>
+        <a href="https://github.com/Artilleryjoe" target="_blank" class="inline-block text-teal-400 font-semibold hover:underline">GitHub</a>
       </div>
-      <p class="text-teal-400 font-semibold mb-6">🔒 Currently accepting new clients.<br />Get in touch or request a quote via Fiverr or Ko-fi.</p>
+      <p class="text-teal-400 font-semibold text-lg">
+        🔒 Currently accepting new clients.<br />Get in touch or request a quote via Fiverr or Ko-fi.
+      </p>
     </section>
 
-    <section id="services">
-      <h2 class="text-3xl font-semibold border-b-2 border-gray-700 pb-3 mb-8 text-center text-teal-400">
+    <!-- Services -->
+    <section id="services" class="bg-gray-800 rounded-lg shadow-lg p-8">
+      <h2 class="text-3xl font-semibold border-b-2 border-teal-400 pb-3 mb-8 text-center text-teal-400">
         Services I Offer
       </h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-        <div class="bg-gray-900 rounded-lg shadow p-6">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div>
           <h3 class="text-xl font-semibold mb-2 text-teal-300">Security Consultations & Risk Assessments</h3>
           <p>Identify vulnerabilities, explain threats in plain language, and provide actionable steps to strengthen your defenses.</p>
         </div>
-        <div class="bg-gray-900 rounded-lg shadow p-6">
+        <div>
           <h3 class="text-xl font-semibold mb-2 text-teal-300">Cybersecurity Policy & Documentation Support</h3>
           <p>Custom SOPs, incident response plans, and policies tailored to your business operations.</p>
         </div>
-        <div class="bg-gray-900 rounded-lg shadow p-6">
+        <div>
           <h3 class="text-xl font-semibold mb-2 text-teal-300">Website & Web Presence Security Audits</h3>
           <p>Audits to catch vulnerabilities like XSS, misconfigurations, and other risks in websites and online content.</p>
         </div>
-        <div class="bg-gray-900 rounded-lg shadow p-6">
+        <div>
           <h3 class="text-xl font-semibold mb-2 text-teal-300">Personal & Small Business Digital Security Training</h3>
           <p>Phishing prevention, password safety, and operational security basics taught in simple, easy-to-understand terms.</p>
         </div>
-        <div class="bg-gray-900 rounded-lg shadow p-6">
+        <div>
           <h3 class="text-xl font-semibold mb-2 text-teal-300">Incident Response Guidance & Remediation Assistance</h3>
           <p>Helping you respond effectively to security incidents with clear, ethical support.</p>
         </div>
-        <div class="bg-gray-900 rounded-lg shadow p-6">
+        <div>
           <h3 class="text-xl font-semibold mb-2 text-teal-300">Vulnerability Scanning & Reporting</h3>
           <p>Thorough scans with straightforward reports and recommendations.</p>
         </div>
-        <div class="bg-gray-900 rounded-lg shadow p-6">
+        <div>
           <h3 class="text-xl font-semibold mb-2 text-teal-300">Secure Configuration of Devices & Networks</h3>
           <p>Setting up your devices and networks for maximum security without hassle.</p>
         </div>
       </div>
     </section>
 
-    <section id="about" class="bg-gray-900 rounded-lg shadow p-8 text-center">
-      <h2 class="text-3xl font-semibold border-b-2 border-gray-700 pb-3 mb-6 text-teal-400">Who I Am</h2>
+    <!-- Who I Am -->
+    <section id="about" class="bg-gray-800 rounded-lg shadow-lg p-8 text-center">
+      <h2 class="text-3xl font-semibold border-b-2 border-teal-400 pb-3 mb-6 text-teal-400">Who I Am</h2>
       <p>
         Hi, I'm Kristopher, a U.S. Army veteran, cybersecurity graduate, and founder of Iron Dillo. I provide remote support that blends technical know-how with clear communication and ethical service.
       </p>
     </section>
 
-    <section id="why" class="bg-gray-900 rounded-lg shadow p-8 text-center">
-      <h2 class="text-3xl font-semibold border-b-2 border-gray-700 pb-3 mb-6 text-teal-400">Why Iron Dillo?</h2>
+    <!-- Why Iron Dillo -->
+    <section id="why" class="bg-gray-800 rounded-lg shadow-lg p-8 text-center">
+      <h2 class="text-3xl font-semibold border-b-2 border-teal-400 pb-3 mb-6 text-teal-400">Why Iron Dillo?</h2>
       <ul class="list-disc list-inside space-y-2 max-w-xl mx-auto text-left">
         <li>Ethical, permission-based services only</li>
         <li>Clear scope. No hidden costs.</li>
@@ -97,17 +103,18 @@
       </ul>
     </section>
 
+    <!-- Let's Talk -->
     <section id="contact" class="text-center">
       <h2 class="text-3xl font-semibold mb-4 text-teal-400">Let's Talk</h2>
       <p class="mb-6 max-w-xl mx-auto">
-        Have questions? Not sure what you need? <a href="#" class="underline">Contact me</a> or <a href="#" class="underline">book a free intro call</a> and let’s figure it out—no pressure.
+        Have questions? Not sure what you need? <a href="/contact.html" class="underline">Contact me</a> or <a href="#" class="underline">book a free intro call</a> and let’s figure it out—no pressure.
       </p>
     </section>
 
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-500 text-center p-6 mt-12 text-sm">
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm max-w-4xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
     <a href="/privacy.html" class="hover:underline">Privacy</a> | 
     <a href="/terms.html" class="hover:underline">Terms</a>
