--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,11 @@
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
+  <!-- Logo Header -->
+  <header class="text-center pt-8">
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
+  </header>
+
   <!-- Navigation -->
   <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10">
     <a href="/index.html" class="text-teal-400 hover:underline font-semibold">Home</a>
