--- a/terms.html
+++ b/terms.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Terms of Use – IronDillo</title>
-  <meta name="description" content="Understand the rules and disclaimers for using IronDillo's content, contact form, and services.">
+  <title>Privacy Policy – IronDillo</title>
+  <meta name="description" content="IronDillo respects your privacy—no cookies, no tracking, no nonsense. Read our full policy here.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-  <link rel="canonical" href="https://irondillo.com/terms.html" />
-  
+  <link rel="canonical" href="https://irondillo.com/privacy.html" />
 
   <style>
     body {
@@ -30,22 +29,24 @@
 <body>
 
   <header>
-    <h1>Terms of Use</h1>
+    <h1>Privacy Policy</h1>
     <p>Effective Date: June 12, 2025</p>
   </header>
 
   <section>
-    <p>By using this website (irondillo.com), you agree to the following terms and conditions:</p>
+    <p><strong>IronDillo.com does not collect personal data.</strong> This site is designed with privacy in mind:</p>
 
     <ul>
-      <li>This site provides cybersecurity-related information, services, and commentary for educational and informational purposes only.</li>
-      <li>No guarantees are made regarding the accuracy, completeness, or effectiveness of any advice provided. Use at your own discretion.</li>
-      <li>Engaging in services offered through this site (such as consulting) does not establish any legal partnership or contract unless explicitly agreed upon in writing.</li>
-      <li>You agree not to misuse this site for unlawful purposes, including attempts to exploit, hack, or deface its contents.</li>
-      <li>Iron Dillo is not responsible for the content of external sites linked from this domain.</li>
+      <li>No cookies</li>
+      <li>No tracking scripts</li>
+      <li>No analytics</li>
     </ul>
 
-    <p>For questions, concerns, or formal inquiries, please use the <a href="/index.html#contact">contact form</a>.</p>
+    <p>If you choose to use the contact form, the message you send will be delivered via Formspree and may include your name, email, and the message content. This information is only used to reply to your inquiry and is not stored on this site.</p>
+
+    <p>I do not share, sell, or disclose personal information to third parties.</p>
+
+    <p>If you have any concerns, please reach out directly via the <a href="/index.html#contact">contact form</a>.</p>
   </section>
 
   <footer style="margin-top:3rem; font-size:0.9rem; color:#888;">
