--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="https://github.com/Artilleryjoe" target="_blank" class="inline-block text-teal-400 font-semibold hover:underline">GitHub</a>
       </div>
       <p class="text-teal-400 font-semibold text-lg">
-        🔒 Currently accepting new clients.<br />Get in touch or request a quote via Fiverr or Ko-fi.
+         Currently accepting new clients.<br />Get in touch or request a quote via Fiverr or Ko-fi.
       </p>
     </section>
 
